Fixed layout bugs

--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,7 @@
   --spacing-md:2rem;
   --spacing-lg:3rem;
   --spacing-xl:6rem;
-  --spacing-xxl:8rem;
+  --spacing-xxl:10rem;
 }
 
 *,
